--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 
 * {
@@ -9,7 +8,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 :root {
@@ -46,8 +45,8 @@ section {
 /* --------- Header ------------ */
 
 .header {
-    /* position: fixed; */
-    position: static;
+    position: fixed;
+    /* position: static; */
     top: 0;
     left: 0;
     width: 100%;
@@ -76,6 +75,7 @@ section {
     color: var(--text-color);
     margin: 3rem;
     transition: .3s;
+     font-family: 'Oswald', sans-serif;
 }
 
 .navbar a:hover,
@@ -95,6 +95,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .home_page {
@@ -109,6 +110,8 @@ section {
 
 .home_page h4 {
     font-size: 30px;
+    margin-top: 350px;
+    font-family: 'Pacifico', cursive;
 }
 
 .home_page h2 {
@@ -116,11 +119,13 @@ section {
     font-size: 100px;
     color: var(--main-color);
     margin-bottom: 25px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .home_page p {
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 30px;
+    font-family: 'Pacifico', cursive;
 }
 
 .button {
@@ -129,9 +134,9 @@ section {
     font-size: 25px;
     color: var(--text-color);
     background: black;
-    padding: 1rem 3rem;
+    padding: 0.5rem 2rem;
     border: 2px solid var(--main-color);
-    border-radius: 10px;
+    border-radius: 20px;
     outline: none;
     cursor: pointer;
     display: inline-flex;
@@ -178,4 +183,151 @@ section {
         transform: translate(-50%, -50%) scale(1);
         opacity: 0;
     }
+}
+
+.btn_bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.btn_bottom a {
+    display: flex;
+    font-size: 35px;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    /* btn_bottomdisplay: inline-flex; */
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background: var(--bg-color);
+    background-size: 100%;
+    margin: 1rem 1rem 2rem 1.5rem;
+}
+
+.btn_bottom a:hover {
+    color: var(--text-color);
+    border: 2px solid var(--text-color);
+}
+
+
+/* span {
+    color: var(--main-color);
+}
+span:hover {
+    color: var(--text-color);
+} */
+
+
+
+/* ----------------------------------------- about page ------------------------------- */
+
+.about {
+    background: var(--bg-color);
+}
+
+
+
+
+/* ----------------------------------------- menu page ------------------------------- */
+.menu {
+    background: var(--second-bg-color);
+}
+
+
+
+
+/* ----------------------------------------- our chef page ------------------------------- */
+
+.ourchef {
+    background: var(--second-bg-color2);
+}
+
+
+
+
+/* ----------------------------------------- gallery page ------------------------------- */
+
+.gallery {
+    background: var(--bg-color);
+}
+
+
+
+
+/* ----------------------------------------- blog page ------------------------------- */
+
+.blog {
+    background: var(--second-bg-color);
+}
+
+
+
+/* ----------------------------------------- contect page ------------------------------- */
+
+.contect {
+    background: var(--second-bg-color2);
+}
+
+
+
+
+
+
+.footer_page {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 70px 10px;
+    background: var(--bg-color);
+}
+
+.footer_text_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer_text_img p {
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+.footer_text_img img {
+    width: 7vw;
+}
+
+.footer_socail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer_socail p {
+    font-size: 20px;
+    color: var(--text-color);
+}
+
+.footer_socail a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    margin-left: 30px;
+    color: var(--text-color);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 2px solid var(--text-color);
+    margin: 1rem 1rem 1rem 1.5rem;
+    background: var(--bg-color);
+    background-size: 100%;
+}
+
+.footer_socail a:hover {
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
 }
