--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ span:hover {
     justify-content: space-between;
     background: url(/img/20.webp) fixed center;
     background-size: 100%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 4rem 20% 4rem;
     gap: 2rem;
 }
@@ -562,6 +562,26 @@ span:hover {
     
     .footer_socail a {
         font-size: 20px;
+    }
+
+    .about .ab_text_img {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        padding: 10rem 10% 5rem;
+    }
+
+    .about .ab_text {
+        text-align: center;
+    }
+
+    .about .ab_serivces {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* padding: 4rem 20% 4rem; */
     }
 }
 
