--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 
-
 * {
     margin: 0;
     padding: 0;
@@ -140,12 +139,22 @@ header.sticky {
 }
 
 
+span {
+    color: var(--main-color);
+    font-size: 20px;
+    font-family: 'Pacifico', cursive;
+}
+span:hover {
+    color: var(--text-color);
+}
+
+
 
 /* ----------------------------------------- home page ------------------------------- */
 
 .home {
     /* background: url(/img/rwppn); */
-    background: url(/img/rwppn-sora-indoo2r.jpg);
+    background: url(/img/rwppn-sora-indoo2r2.jpg);
     /* background-size: 100%; */
     background-position: center;
     background-attachment: fixed;
@@ -325,7 +334,7 @@ span:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: url(/img/20.webp) fixed center;
+    background: url(/img/20.jpg) fixed center;
     /* background-size: 100%; */
     /* border-radius: 10px; */
     padding: 4rem 20% 4rem;
@@ -497,6 +506,122 @@ button.active {
 
 .ourchef {
     background: var(--second-bg-color2);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.top_ourchef {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 75px;
+    /* margin-bottom: 10px; */
+}
+
+.ourchef .top_ourchef h2 {
+    font-size: 40px;
+    color: var(--main-color);
+    margin-top: 7px;
+    margin-bottom: 20px;
+}
+.ourchef .top_ourchef h2:hover {
+    color: var(--text-color);
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider .list_slider {
+    position: relative;
+    width: 1000px;
+    height: 550px;
+    margin: 10px;
+    /* background: var(--bg-color); */
+    border: 5px solid var(--text-color);
+    margin-bottom: 40px;
+}
+
+.slider .list_slider .item_slider {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    /* clip-path: circle(0% at 0 50%); */
+    clip-path: circle(0% at 50% 100%);
+    background: var(--bg-color);
+}
+
+.slider .list_slider .item_slider.activee {
+    /* clip-path: circle(150% at 0 50%); */
+    clip-path: circle(150% at 50% 100%);
+    transition: 2s;
+    transition-property: clip-path;
+}
+
+.slider .list_slider .item_slider .text_item {
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center;
+    flex-direction: column; */
+    padding: 15px;
+}
+
+.slider .list_slider .item_slider .text_item h3 {
+    font-size: 30px;
+    letter-spacing: 2px;
+}
+
+.slider .list_slider .item_slider .text_item h6 {
+    font-size: 10px;
+    color: var(--main-color);
+    margin-bottom: 25px;
+}
+
+.slider .list_slider .item_slider .text_item p {
+    font-size: 17px;
+    margin-bottom: 15px;
+}
+
+.slider .list_slider .item_slider .text_item img {
+    width: 7vw;
+    z-index: 1;
+}
+
+.slider .list_slider .item_slider .img_item img {
+    width: 27.3vw;
+    z-index: 1;
+}
+
+.slider .navigation_slider {
+    z-index: 2;
+    position: absolute;
+    display: flex;
+    bottom: 30px;
+    left: 45%;
+    transform: translateX(-50%);
+}
+
+.slider .navigation_slider .btn_slider {
+    width: 30px;
+    height: 10px;
+    margin: 7px;
+    background: var(--text-color);
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.slider .navigation_slider .btn_slider.activee {
+    background: var(--main-color);
+    box-shadow: 0 0 2px rgb(255, 0, 200);
 }
 
 
@@ -508,6 +633,115 @@ button.active {
     background: var(--bg-color);
 }
 
+.top_gallery,
+.botton_gallery {
+    /* margin-top: 75px; */
+    /* margin-bottom: 15px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+.top_gallery h4 {
+    margin-top: 75px;
+}
+
+.top_gallery h2,
+.botton_gallery h2 {
+    font-size: 40px;
+    color: var(--main-color);
+    margin-top: 7px;
+    margin-bottom: 20px;
+}
+
+.top_gallery h2:hover,
+.botton_gallery h2:hover {
+    color: var(--text-color);
+}
+
+.item_galleryy {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.item_gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.item_gallery .gallery_box {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery_box img {
+    width: 100%;
+    transition: .5s ease;
+}
+
+.gallery_box:hover img {
+    transform: scale(1.1);
+}
+
+.gallery_box .gallery_layer {
+    position: absolute;
+    /* top: 0;
+    bottom: 0;
+    left: 0; */
+    width: 90%;
+    height: 90%;
+    background: #000000c1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transform: translateY(110%);
+    transition: .5s ease;
+}
+
+.gallery_box:hover .gallery_layer {
+    transform: translateY(0);
+}
+
+.gallery_layer i {
+    font-size: 40px;
+    color: var(--text-color);
+    margin-bottom: 2px;
+}
+
+.gallery_layer p {
+    font-size: 27px;
+    color: var(--text-color);
+}
+
+.botton_gallery {
+    background: url(/img/commercial1.jpg) fixed center;
+    background-size: 100%;
+    padding-top: 15px;
+}
+
+.botton_gallery h1 {
+    font-size: 60px;
+    margin: 10px 10px;
+}
+
+.botton_gallery p {
+    font-size: 30px;
+    padding-left: 20%;
+    padding-right: 20%;
+    margin-bottom: 30px;
+    text-align: center;
+    
+}
+
 
 
 
@@ -517,54 +751,206 @@ button.active {
     background: var(--second-bg-color);
 }
 
+.blog .top_blog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+.top_blog h4 {
+    margin-top: 75px;
+}
+
+.top_blog h2 {
+    font-size: 40px;
+    color: var(--main-color);
+    margin-top: 7px;
+    margin-bottom: 20px;
+}
+
+.top_blog h2:hover {
+    color: var(--text-color);
+}
+
+.con_blog {
+    padding-left: 15%;
+    padding-right: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contan_blog {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.contan_blog .box_blog {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: column;
+    /* width: 270px;
+    height: 400px; */
+    background: var(--bg-color);
+    border-radius: 5px;
+}
+
+.box_blog img {
+    width: 100%;
+    margin-bottom: 15px;
+    /* transform: scale(1); */
+    transition: .5s ease;
+}
+
+.box_blog:hover img {
+    transform: scale(1.1);
+}
+
+.text_b_blog {
+    background: var(--bg-color);
+}
+
+.box_blog a,
+.box_blog p {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.box_blog a {
+    font-size: 20px;
+    color: var(--main-color);
+    margin-bottom: 15px;
+}
+
+.box_blog p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 17px;
+    color: var(--text-color);
+}
+
+.botton_blog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: url(/img/MalisRestaurant1.jpg) fixed center;
+    background-size: 100%;
+}
+
+.botton_blog h4 {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 50px;
+}
+
+.botton_blog .p_b_blog p {
+    font-size: 30px;
+    margin-bottom: 30px;
+    padding-left: 20%;
+    padding-right: 20%;
+    text-align: center;
+}
+
+.botton_blog a {
+    margin-bottom: 30px;
+}
+
 
 
 /* ----------------------------------------- contect page ------------------------------- */
 
-.contect {
+.contact {
     background: var(--second-bg-color2);
-}
-
-
-
-
-/* ----------------------------------------- footer page ------------------------------- */
-
-.footer_page {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 70px 10px;
-    background: var(--bg-color);
-}
-
-.footer_text_img {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+
 }
 
-.footer_text_img p {
-    font-size: 20px;
-    margin-right: 5px;
-}
-
-.footer_text_img img {
-    width: 7vw;
-}
-
-.footer_socail {
+.top_contact {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
-.footer_socail p {
-    font-size: 20px;
+.top_contact h4 {
+    margin-top: 40px;
+}
+
+.top_contact h2 {
+    font-size: 40px;
+    color: var(--main-color);
+    margin-top: 7px;
+    margin-bottom: 20px;
+}
+
+.top_contact h2:hover {
     color: var(--text-color);
 }
 
-.footer_socail a {
+.location_map {
+    display: flex;
+    border: 5px solid var(--main-color);
+    border-radius: 10px;
+    width: 90%;
+
+}
+
+.location_map iframe {
+    width: 100%;
+    display: flex;
+}
+
+.text_contact {
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    gap: 70px;
+    padding: 0 10% 0 10%;
+    /* padding-left: 10%;
+    padding-right: 10%; */
+    margin-top: 25px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.text_contact h3 {
+    font-size: 35px;
+    color: var(--main-color);
+    margin-bottom: 10px;
+}
+
+.text_contact p {
+    font-size: 20px;
+}
+
+.color_botton_contact {
+    background: var(--second-bg-color);
+    width: 100%;
+}
+
+.botton_contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.botton_contact h4 {
+    margin-right: 30px;
+}
+
+.botton_contact a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -580,12 +966,39 @@ button.active {
     background-size: 100%;
 }
 
-.footer_socail a:hover {
+.botton_contact a:hover {
     color: var(--main-color);
     border: 2px solid var(--main-color);
 }
 
 
+
+
+/* ----------------------------------------- footer page ------------------------------- */
+
+.footer_page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px 0 7px;
+    background: var(--bg-color);
+}
+
+.footer_text_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer_text_img p {
+    font-size: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.footer_text_img a h4 {
+    color: var(--main-color);
+}
 
 
 
